// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox component should render correctly with all the default props 1`] = `
.c6 {
  font-size: 16px;
}

.c6.c6.c6 * {
  fill: #012040;
}

.c0 {
  margin: 0px 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c1 {
  width: 24px;
  height: 24px;
  position: relative;
  border: 1px solid #CCCCCC;
  background-color: #ffffff;
  border-radius: 15%;
}

.c4 {
  width: 0;
  height: 0;
  z-index: 1;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c4 .c5 {
  width: 100%;
  height: 100%;
}

.c2 {
  opacity: 0;
  z-index: 2;
  position: absolute;
  width: 100%;
  height: 100%;
  margin: 0;
  cursor: pointer;
}

.c2:focus {
  outline: none;
}

.c2:checked ~ .c3 {
  width: calc(70%);
  height: calc(70%);
  -webkit-transition: width 0.2s ease,height 0.2s ease;
  transition: width 0.2s ease,height 0.2s ease;
}

<div>
  <div
    class="c0"
  >
    
    <div
      class="c1"
    >
      <input
        class="c2"
        name="gender"
        type="checkbox"
      />
      <div
        class="c3 c4"
      >
        <svg
          class="c5 c6"
          height="1em"
          viewBox="0 0 18 14"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 11.17L1.83 7 .41 8.41 6 14 18 2 16.59.59z"
            fill="none"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox component should render correctly with all the props given 1`] = `
.c7 {
  font-size: 16px;
}

.c7.c7.c7 * {
  fill: #012040;
}

.c0 {
  margin: 0px 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c1 {
  margin: 0px 0px 0px 8px;
  color: #012040;
}

.c2 {
  width: 24px;
  height: 24px;
  position: relative;
  border: 1px solid #CCCCCC;
  background-color: #ffffff;
  border-radius: 15%;
}

.c5 {
  width: 0;
  height: 0;
  z-index: 1;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c5 .c6 {
  width: 100%;
  height: 100%;
}

.c3 {
  opacity: 0;
  z-index: 2;
  position: absolute;
  width: 100%;
  height: 100%;
  margin: 0;
  cursor: pointer;
}

.c3:focus {
  outline: none;
}

.c3:checked ~ .c4 {
  width: calc(70%);
  height: calc(70%);
  -webkit-transition: width 0.2s ease,height 0.2s ease;
  transition: width 0.2s ease,height 0.2s ease;
}

<div>
  <div
    class="c0"
  >
    <label
      class="c1"
    >
      Female
    </label>
    <div
      class="c2"
    >
      <input
        class="c3"
        name="gender"
        type="checkbox"
      />
      <div
        class="c4 c5"
      >
        <svg
          class="c6 c7"
          height="1em"
          viewBox="0 0 18 14"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 11.17L1.83 7 .41 8.41 6 14 18 2 16.59.59z"
            fill="none"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
